# ironmlx

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_zh.md
.cargo/: config.toml
.github/workflows/: build.yaml
docs/: dashboard-feature-status.md  model-load-unload-flow.md
docs/superpowers/plans/: 2026-03-17-qwen35-vlm.md
docs/superpowers/specs/: 2026-03-17-qwen35-vlm-design.md
docs/wiki/: gpu-memory-metrics.md
ironmlx/: Cargo.toml
ironmlx-app/: Cargo.toml
ironmlx-app/src/: app_delegate.rs  chat.html  config.rs  dashboard.rs  dashboard2.html  i18n.rs  main.rs  preferences.rs  server_manager.rs  updater.rs  web_dashboard.rs  welcome.rs
ironmlx/src/: config.rs  engine.rs  engine_handle.rs  engine_pool.rs  hardware.rs  main.rs  memory_guard.rs  state.rs
ironmlx/src/admin/: api.rs  mod.rs
ironmlx/src/admin/static/: app.js  i18n.js  index.html  style.css
ironmlx/src/api/: mod.rs  models.rs  types.rs
ironmlx/tests/: api_integration.rs
mlx/: Cargo.toml
mlx-sys/: Cargo.toml  build.rs
mlx-sys/src/: lib.rs
mlx-sys/tests/: smoke.rs
mlx/examples/: benchmark.rs  verify_e2e.rs
mlx/src/: array.rs  array_ops.rs  device.rs  dtype.rs  error.rs  fast.rs  fast_kernel.rs  io.rs  lib.rs  memory.rs  metal.rs  metal_kernel.rs  ops.rs  random.rs  stream.rs  vector.rs
mlx/src/cache/: block_pool.rs  block_store.rs  boundary_snapshot.rs  cache_type.rs  mod.rs  paged_cache.rs  prefix_cache.rs  ssd_store.rs
mlx/src/generate/: batch.rs  chat_template.rs  kv_cache.rs  mod.rs  padding.rs  sampler.rs  tokenizer.rs
mlx/src/media/: image_proc.rs  loader.rs  mod.rs  video.rs
mlx/src/model/: bert.rs  config.rs  embedding_model.rs  llama.rs  loader.rs  mod.rs  qwen3.rs  qwen35.rs  qwen35_vl.rs  reranker_model.rs  rope_bert.rs
mlx/src/nn/: activations.rs  attention.rs  conv1d.rs  embedding.rs  fused_paged_attention.rs  fused_paged_attention_kernel.metal  gated_delta_net.rs  kv_write_kernel.metal  linear.rs  mlp.rs  mod.rs  module.rs  moe.rs  mrope.rs  norm.rs  paged_attention.rs  paged_attention_kernel.metal
mlx/src/nn/vision/: mod.rs  patch_embed.rs  qwen35_vision.rs  spatial_merger.rs  vision_block.rs
mlx/tests/: integration.rs
packaging/homebrew/: README.md  ironmlx.rb
