[package]
name = "ironmlx-app"
version = "0.1.0"
edition = "2024"
description = "ironmlx macOS menubar application"

[[bin]]
name = "ironmlx-app"
path = "src/main.rs"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSThread", "NSRunLoop", "NSTimer", "NSNotification", "NSURL", "NSProcessInfo", "NSBundle", "NSObject", "NSGeometry"] }
objc2-core-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSStatusBar", "NSStatusItem", "NSMenu", "NSMenuItem", "NSImage", "NSWindow", "NSView", "NSTextField", "NSButton", "NSControl", "NSAlert", "NSWorkspace", "NSRunningApplication", "NSResponder", "NSText", "NSEvent", "NSOpenPanel", "NSSavePanel", "NSPanel", "NSStackView", "NSSplitView", "NSScrollView", "NSClipView", "NSTableView", "NSTableColumn", "NSTableCellView", "NSColor", "NSFont", "NSBox", "NSVisualEffectView", "NSImageView", "NSSegmentedControl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
