[package]
name = "ironmlx"
version = "0.1.0"
edition = "2024"
description = "Local LLM inference on Apple Silicon — Rust version of omlx"

[[bin]]
name = "ironmlx"
path = "src/main.rs"

[dependencies]
ironmlx-core = { path = "../mlx" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "6"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
libc = "0.2"
