[package]
name = "ironmlx-core"
version = "0.1.0"
edition = "2024"
description = "Safe idiomatic Rust API for MLX — core library"

[dependencies]
mlx-sys = { path = "../mlx-sys" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = "0.4"
